Change background image in index.html
Updated background image URL to a new source.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       padding:20px;
       
       /* Background image from Imgur */
-      background-image: url('https://raw.githubusercontent.com/atef2win/agent-chat-interface/main/gemini-2.5-flash-image_best_quality_ever_on_this_image_with_a_purple_violet_background_keeping_the_orig-0.jpg');
+      background-image: url('https://res.cloudinary.com/ddjovu7kn/image/upload/v1768229348/gemini-2.5-flash-image_best_quality_ever_on_this_image_with_a_purple_violet_background_keeping_the_orig-0_a33pb8.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
